comit final entrega proyecto

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,10 +1,10 @@
-@import "imports/variables.scss";
-@import "imports/mixins.scss";
-@import "imports/premain.scss";
-@import "imports/header-footer.scss";
-@import "imports/index.scss";
-@import "imports/propiedad.scss";
-@import "imports/cuenta.scss";
-@import "imports/ayuda.scss";
-@import "imports/configuracion.scss";
-@import "imports/querys.scss";
+@use "imports/variables";
+@use "imports/mixins";
+@use "imports/reset";
+@use "imports/header-footer";
+@use "imports/index";
+@use "imports/propiedad";
+@use "imports/cuenta";
+@use "imports/ayuda";
+@use "imports/configuracion";
+@use "imports/querys";
